--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title>My Sidepanel</title>
+    <script src="popup.js"></script>
   </head>
+  <body>
     <h1>All sites sidepanel extension</h1>
     <p>This side panel is enabled on all sites</p>
     <input type="string"></input>
