--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,10 @@
   <body>
     <h1>All sites sidepanel extension</h1>
     <p>This side panel is enabled on all sites</p>
-    <input type="string"></input>
+    <input type="text" id="userInput" placeholder="질문을 입력하세요"></input>
+    <button id="askButton">질문 전송</button>
+
+    <pre id="responseArea">응답 표시 위치</pre>
+
   </body>
 </html>
