--- a/popup.html
+++ b/popup.html
@@ -3,10 +3,15 @@
   <head>
     <title>My Sidepanel</title>
     <script src="popup.js"></script>
+    <link rel="stylesheet" href="popup.css">
+    <meta charset="UTF-8">
   </head>
   <body>
     <h1>All sites sidepanel extension</h1>
     <p>This side panel is enabled on all sites</p>
-    <input type="string"></input>
+    <div class="input-container">
+      <input type="string" placeholder="무엇이든 물어보세요!"></input>
+    </div>
+    
   </body>
 </html>
