--- a/popup.html
+++ b/popup.html
@@ -7,12 +7,15 @@
     <meta charset="UTF-8">
   </head>
   <body>
-    <h1>All sites sidepanel extension</h1>
-    <p>This side panel is enabled on all sites</p>
-    <input type="text" id="userInput" placeholder="질문을 입력하세요"></input>
-    <button id="askButton">질문 전송</button>
+    <div class="input-container">
+      <input type="text" id="userInput" placeholder="질문을 입력하세요"></input>
+      <button id="askButton" onclick="SendMessage(input.value)">질문 전송</button>
+    </div>
 
-    <pre id="responseArea">응답 표시 위치</pre>
+    <div>
+      <pre id="questionArea">사용자 질문 표시 위치</pre>
+      <pre id="responseArea">응답 표시 위치</pre>
+    </div>
 
   </body>
 </html>
