really last fixing..

--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>My Sidepanel</title>
-    <script src="popup.js"></script>
+    <script type="module" src="popup.js"></script>
   </head>
   <body>
     <h1>All sites sidepanel extension</h1>
@@ -11,6 +11,9 @@
     <button id="askButton">질문 전송</button>
 
     <pre id="responseArea">응답 표시 위치</pre>
+
+
+    <button id="runCrawler">crawling</button>
 
   </body>
 </html>
