--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>AI Assistant</h1>
+            <h1>GUIDEE</h1>
         </div>
         
         <div class="chat-container">
