--- a/popup.html
+++ b/popup.html
@@ -38,6 +38,6 @@
         <button id="askButton" type="button">질문하기</button>
       </div>
     </div>
-    <script src="popup.js"></script>
+    <script type="module" src="popup.js"></script>
   </body>
 </html>
